# ddns-util

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: flake.yml
nix/modules/: k-ddns.nix
src/: cli.rs  main.rs
