[package]
name = "ddns-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.71"
thiserror = "1.0.43"

clap = { version = "4.3.11", features = ["derive"] }

reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
